fixed styles in blog post when dark mode is active

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,13 @@ body {
 	padding: 0;
 	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+
+body.dark .prose h1,
+body.dark .prose h2,
+body.dark .prose h3,
+body.dark .prose h4,
+body.dark .prose blockquote>p,
+body.dark .prose p>strong,
+body.dark .prose {
+	color: white;
+}
